--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,11 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
-.env
 
 /app/assets/builds/*
 !/app/assets/builds/.keep
+
+/node_modules
+/public/uploads/
+.env
+**/.DS_Store
