--- a/package.json
+++ b/package.json
@@ -1,5 +1,14 @@
 {
-  "dependencies": {
-    "daisyui": "^3.5.1"
-  }
+    "name": "app",
+    "private": "true",
+    "dependencies": {
+        "autoprefixer": "^10.4.14",
+        "daisyui": "^3.5.1",
+        "postcss": "^8.4.21",
+        "sass": "^1.61.0",
+        "tailwindcss": "^3.3.1"
+    },
+    "scripts": {
+        "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --minify"
+    }
 }
